tests/miniJava/neg/004073_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java class java { public static void Main ( String [ ] java ) { { } } } extends java { }
